@@ -1,0 +1,309 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6771\u4eac\u96b1\u85cf\u7684\u5bf6\u85cf\uff01\u5168\u5973\u6027\u6f14\u54e1\u4e3b\u6f14\u7684\u300cThe Show\u300d\u5728\u795e\u7530\u660e\u795e\u795e\u793e\u4e0a\u6f14\uff0c\u9ad4\u9a57\u65e5\u672c\u50b3\u7d71\u6587\u5316\u7684\u7368\u7279\u9b45\u529b", "description": "\u6771\u4eac\u96b1\u85cf\u7684\u5bf6\u85cf\uff01\u5168\u5973\u6027\u6f14\u54e1\u4e3b\u6f14\u7684\u300cThe Show\u300d\u5728\u795e\u7530\u660e\u795e\u795e\u793e\u4e0a\u6f14\uff0c\u9ad4\u9a57\u65e5\u672c\u50b3\u7d71\u6587\u5316\u7684\u7368\u7279\u9b45\u529b", "url": "https://www.famechos.me/news/\u6771\u4eac\u96b1\u85cf\u7684\u5bf6\u85cf\uff01\u5168\u5973\u6027\u6f14\u54e1\u4e3b\u6f14\u7684\u300cThe Show\u300d\u5728\u795e\u7530\u660e\u795e\u795e\u793e\u4e0a\u6f14\uff0c\u9ad4\u9a57\u65e5\u672c\u50b3\u7d71\u6587\u5316\u7684\u7368\u7279\u9b45\u529b/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-10T16:34:12.292553+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力/"/>
+<meta name="description" content="東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力。來發現東京隱藏的寶藏，沉浸在日本傳統文化的美麗之中。">
+
+<meta name="keywords" content="東京隱藏的寶藏，The Show，神田明神神社，全女性演員主演，日本傳統文化，獨特魅力，東京旅遊，日本文化體驗">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力/" />
+        <meta property="og:title" content="東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力" />
+        <meta property="og:description" content="東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力" />
+        <meta property="twitter:description" content="東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">Others</p>
+          <p class="news-date">10/10/2024</p>
+        </div>
+	<p>位於東京近郊的神田明神神社，正在上演一場名為「The Show」的表演。這場表演以傳統的故事講述為主，全部由女性演員主演，講述著著名日本詩人小野小町的傳奇故事。這場無聲的表演將會令你感到驚嘆。</p>
+<p>我有機會體驗了「The Show」的所有內容，可以說我對這場表演印象深刻。這場表演提倡女性在劇場中的地位，無論是遊客還是當地人，都值得一看。我很幸運地能夠與該表演的總經理前田百合子進行了一次訪談，她帶我走進了這場表演的幕後。</p>
+<h2>神田明神神社的「The Show」到底是什麼？</h2>
+<p>「The Show」從寶塚歌劇團（Takarazuka Revue）中汲取靈感，這是一個位於兵庫縣的全女性音樂劇團。前田解釋說：「在這個劇團中，女性扮演所有角色，包括男性角色。」這使得男性角色具有女性化的魅力，不僅吸引了許多女性粉絲，也吸引了外國觀眾。</p>
+<p>前田還旨在通過她的才華橫溢的演員們，視覺上突出日本傳統女性美的文化概念——大和撫子。她注意到，在神田明神神社周圍的地區，除了酒吧和俱樂部之外，幾乎沒有夜間娛樂選擇，而她的豐富多彩的表演則改變了這種局面。</p>
+<h2>如何購買神田明神神社「The Show」的門票</h2>
+<p>請儘量提前預訂門票，因為座位有限，而且每周只演出兩場。截至撰寫本文時，這個版本的「The Show」每周二和周四晚上演出兩場。</p>
+<p>門票價格如下：</p>
+<ul>
+<li>5500日元：後排座位和一杯飲料</li>
+<li>6500日元：前排座位和一杯飲料</li>
+<li>7500日元：VIP套餐（包括前排座位、飲料和特典）</li>
+</ul>
+請注意，門票價格可能會有所變動，請在官網上確認最新的價格和演出時間。<h2>東京的神社裡的特別體驗</h2>
+<p>對於那些想要享受無限制飲料的夜晚的人，有一種特殊的門票，包括這個選項。費用根據座位類型而異：後排座位6500日元，前排座位7500日元。</p>
+<p>您可以通過樂天旅行體驗（Rakuten Travel Experiences）在線預訂門票。</p>
+<p>這個體驗提供了高品質的製作，具有東京最著名的神社之一的獨特環境，並且是唯一一場由全女性演員主演的表演。</p>
+<h2>有什麼可以期待</h2>
+<p>這場表演以展示小野小町的傳奇故事和生活為主，通過各種傳統和現代歌曲。故事通過令人印象深刻的木偶戲、美麗的和服和每個演員的出色表演而更加生動。</p>
+<p>注意：您被鼓勵為演員們留下小費，使用桌子上的小信封。</p>
+<h2>神田明神的精彩演出</h2>
+<p>神田明神的表演是一個精心安排的演出，演員們穿梭於人群中，背後是數位屏幕的映照。這個充滿動力的演出結合了戲劇、浪漫和恐怖元素，能夠讓觀眾完全投入其中。</p>
+<h2>節目時間安排</h2>
+<p>場地於晚上7點開放給客人，抵達桌子後，有一個小時左右的時間可以坐下並點餐。這段時間內，演員們也會走到桌子旁，自我介紹並與您聊天。</p>
+<h2>節目的時長</h2>
+<p>表演於晚上8點15分開始，持續約一個小時。主表演結束後，每個演員都會自我介紹，然後邀請每桌觀眾上台拍照。當客人離開時，演員們會走到您的桌子旁，與您道別，並在晚上9點至9點30分之間護送您離開。</p>
+<h2>安排您的座位</h2>
+<p>每個團體都被分配到自己的桌子，可以在享受美食的同時，清晰地觀看舞台。雖然您不能選擇特定的桌子，但您可以購買前排票，以保證視野不受阻礙。</p>
+<h2>重要须知</h2>
+<p>* 請注意，在主表演期間，不允許拍照和錄影。</p>
+* 但是，在表演結束後，您可以與整個演員團隊拍照。<h2>適合家庭嗎？</h2>
+<p>雖然嬰兒可以免費觀看表演，但我認為這個表演更適合對戲劇和傳統文化感興趣的成人。表演時間較長，結束時間較晚，特效和大聲音樂可能會讓年幼的孩子感到不知所措。</p>
+<h2>品嚐神田明神的美食與飲品</h2>
+<p>有à la carte菜單，包括居酒屋風格的菜餚，如karaage（炸雞）、takoyaki（炸章魚丸）、edamame、薯條和其他選擇。所有菜餚的價格都在¥800至¥1,000之間，這是戲劇風格的餐飲和豐富的份量的合理價格。我的個人推薦是karaage——它是完美的。</p>
+<h2>這些飲料怎麼樣呢？</h2>
+<p>飲料菜單不錯，有各種酒精飲料，如啤酒、清酒、葡萄酒和香檳，以及軟飲料。它們的價格從約¥600開始，高達¥10,000以上的高級飲料。</p>
+<p><p>有一個單獨的菜單供無限制飲料服務。它的選擇略有限，包括啤酒、葡萄酒、高球和軟飲料。</p>請注意，食物和飲料只能在晚上7點至表演開始前點餐。</p>
+<h2>神田明神的表演，如何前往</h2>
+<p>前往神田明神的最佳方法是乘坐JR山手線到秋葉原站，然後步行約7分鐘。抵達後，您需要進入EDOCCO江戶文化中心，這是一個位於神社內的會議中心。劇場位於B1樓層。</p>
+<h2>探索秋葉原周圍的更多精彩體驗</h2>
+<p>鄰近秋葉原是動漫迷的天堂，充滿了電子商店、女僕咖啡館和遊戲中心。您可以輕鬆地花幾個小時在東京的“電子城”漫步。</p>
+<table>
+<tr>
+<th>附近景點</th>
+<th>描述</th>
+</tr>
+<tr>
+<td>電子商店</td>
+<td>各種電子產品的天堂</td>
+</tr>
+<tr>
+<td>女僕咖啡館</td>
+<td>體驗特殊的咖啡文化</td>
+</tr>
+<tr>
+<td>遊戲中心</td>
+<td>享受各種電子遊戲</td>
+</tr>
+</table>
+<p>請注意，資訊可能會有變動。</p>
+
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/imXQhmsX7mA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： Tokyo Cheapo</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
