@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:29:56 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:34:30 +0800</lastBuildDate>
 
   <item>
   <title>東京藝妓文化大揭秘！體驗傳統日本的祕密花街</title>
@@ -25,5 +25,11 @@
   <description>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</description>
   <category>Others</category>
   <pubDate>Thu, 10 Oct 2024 16:29:56 +0800</pubDate>
+</item><item>
+  <title>東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力</title>
+  <link>https://www.famechos.me/news/東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力/</link>
+  <description>東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:34:30 +0800</pubDate>
 </item></channel>
 </rss>
