@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:31:07 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:34:30 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -118,5 +118,11 @@
   <description>K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕</description>
   <category>K-Pop</category>
   <pubDate>Thu, 10 Oct 2024 16:31:07 +0800</pubDate>
+</item><item>
+  <title>東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力</title>
+  <link>https://www.famechos.me/news/東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力/</link>
+  <description>東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:34:30 +0800</pubDate>
 </item></channel>
 </rss>
