@@ -132,4 +132,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力/</ns0:loc>
+    <ns0:lastmod>2024-10-10T16:34:30+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
