@@ -52,3 +52,4 @@ https://tokyocheapo.com/entertainment/japanese-culture-and-tradition/where-to-se
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-early-halloween-yokai-and-local-festivals/
 https://www.koreaherald.com/view.php?ud=20241008050665
 https://tokyocheapo.com/living/moving-to-japan-hacks/
+https://www.koreaherald.com/view.php?ud=20241008050610
